Otel metrics and traces shutdown is not thread-safe

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0, 9.0.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • v9.0, v8.3
    • N&O 2026-08-03
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      These can deadlock due to races with how the objects in the otel library obtain the relevant condition variable. This is only really a problem when the export time is too long, as when the next export triggers it unblocks the shutdown.

            Assignee:
            Michael Nugent
            Reporter:
            Michael Nugent
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: