SERVER-132440: Ensure otel library shutdown signals are not missed (#59906)

GitOrigin-RevId: e94f39b3caf3129cfcccf410787ccf5e964ff41b